@@ -122,7 +122,7 @@ public class DrinkShopController {
             alert.showAndWait();
             return;
         }else
-        if (!service.getAllProducts().stream().filter(p->p.getId()==r.getId()).toList().isEmpty()) {
+        if (!service.getAllProducts().stream().filter(p->p.getId()==r.getId()).collect(Collectors.toList()).isEmpty()) {
             Alert alert = new Alert(Alert.AlertType.WARNING);
             alert.setTitle("Error");
             alert.setHeaderText("Exista un produs cu reteta adaugata.");
